plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.adregamdi'
version = '0.0.1-SNAPSHOT'
jar.enabled = false

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.auth0:java-jwt:4.4.0'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    implementation "com.querydsl:querydsl-core"
    implementation "com.querydsl:querydsl-collections"

    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"

    // java.lang.NoClassDefFoundError (javax.annotation.Generated) 에러 대응 코드
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"

    // java.lang.NoClassDefFoundError (javax.annotation.Entity) 에러 대응 코드
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    annotationProcessor 'org.projectlombok:lombok'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'

    // aws
    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // 이미지 리사이징 을 위한 라이브러리
    implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'

    // 동영상 압축을 위한 라이브러리
    implementation 'ws.schild:jave-core:3.3.1'
    implementation 'ws.schild:jave-all-deps:3.3.1'

    // 썸네일 제작을 위한 라이브러리
    implementation 'org.bytedeco:javacv-platform:1.5.9'

}

tasks.named('test') {
    useJUnitPlatform()
}

///// Querydsl 빌드 옵션 (옵셔널)
def generated = 'src/main/generated'

///// querydsl QClass 파일 생성 위치를 지정
tasks.withType(JavaCompile) {
    options.getGeneratedSourceOutputDirectory().set(file(generated))
}

///// java source set 에 querydsl QClass 위치 추가
sourceSets {
    main.java.srcDirs += [generated]
}

///// gradle clean 시에 QClass 디렉토리 삭제
clean {
    delete file(generated)
}

//// submodule 폴더 내 변동사항 현 플젝에 적용 task
task copyPrivate(type: Copy) {
    copy{
        from './BackEnd-Config'
        into 'src/main/resources'
    }
}